apps/folio/tests/snapshots/render__github_at_64_columns.snap
---
source: tests/render.rs
expression: "render_plain(\"github\", 64)"
---
  ┌──────┬───────────────────────────┐
  │ key  │ value                     │
  ├──────┼───────────────────────────┤
  │ type │ guide                     │
  │ tags │ [backup, restic, homelab] │
  └──────┴───────────────────────────┘


  Backing up the home server
  ────────────────────────────────────────────────────────────
  Nightly snapshots go to a local disk first and to off-site
  storage once a week. The restore path is tested monthly,
  because a backup nobody has restored is a hope, not a plan.
  Everything below assumes restic 0.18 and the layout
  described in Server layout.

  What gets backed up
  ────────────────────────────────────────────────────────────
  • /srv/photos - the originals, about 400 GB and growing
    slowly
  • /srv/docs - scanned paper, tax records, manuals
  • Container volumes, but only the ones that hold state:
    ◦ the wiki database
    ◦ the RSS reader
  • Nothing under /srv/media - it is re-downloadable

  ▌ 󰋽 Note
  ▌ The photo library is the one thing here that cannot be
  ▌ recreated. Everything else is a convenience.

  Schedule
  ────────────────────────────────────────────────────────────
  ┌────────────┬───────────────┬─────────────────┬───────────┐
  │ Target     │ When          │ Retention       │ Verified  │
  ├────────────┼───────────────┼─────────────────┼───────────┤
  │ Local disk │ nightly 02:00 │ 14 daily, 8     │ monthly   │
  │            │               │ weekly          │           │
  │ Off-site   │ Sunday 03:00  │ 12 monthly      │ quarterly │
  └────────────┴───────────────┴─────────────────┴───────────┘

  The off-site job runs after the local one so a corrupt night
  never propagates¹.

  The nightly job


   #!/usr/bin/env bash
   # Snapshot the state directories, then prune to the reten→
   export RESTIC_REPOSITORY=/mnt/backup/restic
   restic backup /srv/photos /srv/docs --exclude-caches --ta→
   restic forget --keep-daily 14 --keep-weekly 8 --prune


  Restore drill
  ────────────────────────────────────────────────────────────
  󰄲 Restore one photo album to /tmp and open it
  󰄲 Restore the wiki database and start it against a scratch
    container
  󰄱 Time a full restore of /srv/docs from off-site

  ▌ The point of the drill is not confidence in the tool. It
  ▌ is confidence in the procedure, which is the part that
  ▌ rots.

  ────────────────────────────────────────────────────────────

  Related: Disk replacement · Monitoring · #homelab

  ¹ A corrupt local snapshot still cannot reach off-site until
    the following Sunday, which is the window for noticing.
